--- a/DataBase/1 lab/First_laba_database.tex
+++ b/DataBase/1 lab/First_laba_database.tex
@@ -167,7 +167,7 @@
 	\begin{figure}[h!]
 		\begin{center}
 			\begin{minipage}[h]{0.9\linewidth}
-			\includegraphics[width=1\linewidth]{Database Diagram.jpg}
+			\includegraphics[width=1\linewidth]{Entity relationship diagram.jpg}
 		\end{minipage}
 		\end{center}
 		\caption{Entity relationship diagram}
