--- a/DataBase/2 lab/Second_laba_database.tex
+++ b/DataBase/2 lab/Second_laba_database.tex
@@ -208,7 +208,7 @@
 	\begin{figure}[h!]
 		\centering
 		\begin{minipage}[h]{1\linewidth}
-			\includegraphics[width=1\linewidth]{Figure_1.jpg}  
+			\includegraphics[width=1\linewidth]{Prt sc/Figure_1.jpg}  
 		\end{minipage}
 		\caption{Вивід таблиці з відключеним обмеженням зовнішнього ключа.}
 	\end{figure}
@@ -220,7 +220,7 @@
 	\begin{figure}[h!]
 		\centering
 		\begin{minipage}[h]{1.05\linewidth}
-			\includegraphics[width=1\linewidth]{Figure_2.jpg}  
+			\includegraphics[width=1\linewidth]{Prt sc/Figure_2.jpg}  
 		\end{minipage}
 		\caption{Маємо помилку при спробі підключити раніше відключені обмеження.}
 	\end{figure}
@@ -237,7 +237,7 @@
 	\begin{figure}[h!]
 		\centering
 		\begin{minipage}[h]{1.05\linewidth}
-			\includegraphics[width=1\linewidth]{Figure_3.jpg}  
+			\includegraphics[width=1\linewidth]{Prt sc/Figure_3.jpg}  
 		\end{minipage}
 		\caption{Обмеження знову підключені, а всі дані у відношенні відповідають умовам цілісності бази даних.}
 	\end{figure}
@@ -264,7 +264,7 @@
 	\begin{figure}[h!]
 		\centering
 		\begin{minipage}[h]{1.05\linewidth}
-			\includegraphics[width=1\linewidth]{Figure_4.jpg}  
+			\includegraphics[width=1\linewidth]{Prt sc/Figure_4.jpg}  
 		\end{minipage}
 		\caption{Нові обмеження працюють коректно.}
 	\end{figure}
@@ -288,11 +288,11 @@
 	\begin{figure}[h!]
 		\centering
 		\begin{minipage}[h]{0.9\linewidth}
-			\includegraphics[width=1\linewidth]{Figure_5.jpg}  
+			\includegraphics[width=1\linewidth]{Prt sc/Figure_5.jpg}  
 		\end{minipage}
 		\caption{Стовпець Single, тип даних VARCHAR(3), зі значенням по замовчуванню «Yes».}
 		\begin{minipage}[h]{0.9\linewidth}
-			\includegraphics[width=1\linewidth]{Figure_6.jpg}  
+			\includegraphics[width=1\linewidth]{Prt sc/Figure_6.jpg}  
 		\end{minipage}
 		\caption{Видалений стовпець Single.}
 	\end{figure}
@@ -308,7 +308,7 @@
 	\begin{figure}[h!]
 		\centering
 		\begin{minipage}[h]{0.8\linewidth}
-			\includegraphics[width=1\linewidth]{Figure_7.jpg}  
+			\includegraphics[width=1\linewidth]{Prt sc/Figure_7.jpg}  
 		\end{minipage}
 		\caption{Таблиця Subdivision перейменована на Subdivision05.}
 	\end{figure}
@@ -322,7 +322,7 @@
 	\begin{figure}[h!]
 		\centering
 		\begin{minipage}[h]{0.8\linewidth}
-			\includegraphics[width=1\linewidth]{Figure_8.jpg}  
+			\includegraphics[width=1\linewidth]{Prt sc/Figure_8.jpg}  
 		\end{minipage}
 		\caption{Таблиця Subdivision05 перейменована на Subdivision.}
 	\end{figure}
@@ -336,7 +336,7 @@
 		\begin{figure}[h!]
 		\begin{center}
 			\begin{minipage}[h]{1.05\linewidth}
-				\includegraphics[width=1\linewidth]{Database Diagram.jpg}
+				\includegraphics[width=1\linewidth]{Prt sc/Entity relationship diagram.jpg}
 			\end{minipage}
 		\end{center}
 		\caption{Entity relationship diagram}
