--- a/DataBase/3 lab/Third_laba_database.tex
+++ b/DataBase/3 lab/Third_laba_database.tex
@@ -292,7 +292,7 @@
 	\begin{figure}[h!]
 		\centering
 		\begin{minipage}[h]{1\linewidth}
-			\includegraphics[width=0.6\linewidth]{Figure_1.jpg}  
+			\includegraphics[width=0.6\linewidth]{Prt sc/Figure_1.jpg}  
 		\end{minipage}
 		\caption{Таблиця 'Ownerss'}
 	\end{figure}
@@ -300,7 +300,7 @@
 	\begin{figure}[h!]
 		\centering
 		\begin{minipage}[h]{1\linewidth}
-			\includegraphics[width=0.8\linewidth]{Figure_2.jpg}  
+			\includegraphics[width=0.8\linewidth]{Prt sc/Figure_2.jpg}  
 		\end{minipage}
 		\caption{Таблиця 'Building'}
 	\end{figure}
@@ -308,7 +308,7 @@
 	\begin{figure}[h!]
 		\centering
 		\begin{minipage}[h]{1\linewidth}
-			\includegraphics[width=0.8\linewidth]{Figure_3.jpg}  
+			\includegraphics[width=0.8\linewidth]{Prt sc/Figure_3.jpg}  
 		\end{minipage}
 		\caption{Таблиця 'Subdivision'}
 	\end{figure}
@@ -318,7 +318,7 @@
 	\begin{figure}[h!]
 		\centering
 		\begin{minipage}[h]{1\linewidth}
-			\includegraphics[width=0.8\linewidth]{Figure_4.jpg}  
+			\includegraphics[width=0.8\linewidth]{Prt sc/Figure_4.jpg}  
 		\end{minipage}
 		\caption{Таблиця 'TypeOfSeats'}
 	\end{figure}
@@ -326,7 +326,7 @@
 	\begin{figure}[h!]
 		\centering
 		\begin{minipage}[h]{1\linewidth}
-			\includegraphics[width=0.8\linewidth]{Figure_5.jpg}  
+			\includegraphics[width=0.8\linewidth]{Prt sc/Figure_5.jpg}  
 		\end{minipage}
 		\caption{Таблиця 'Room'}
 	\end{figure}
@@ -334,7 +334,7 @@
 	\begin{figure}[h!]
 		\centering
 		\begin{minipage}[h]{1\linewidth}
-			\includegraphics[width=0.4\linewidth]{Figure_6.jpg}  
+			\includegraphics[width=0.4\linewidth]{Prt sc/Figure_6.jpg}  
 		\end{minipage}
 		\caption{Таблиця 'RoomSeats'}
 	\end{figure}
