Preparing for task

--- a/DataBase/6 lab/Sixth_laba_database.tex
+++ b/DataBase/6 lab/Sixth_laba_database.tex
@@ -68,7 +68,7 @@
 	
 	\begin{center}
 		%\vspace*{0,1cm}
-		{\Large \bfseries \textsc{Лабораторна робота №5}}\\
+		{\Large \bfseries \textsc{Лабораторна робота №6}}\\
 		\hrulefill\\
 		\Large \textsc{ФІ-12 Завалій Олександр\\ Варіант №5}
 	\end{center}
@@ -100,16 +100,8 @@
 	\begin{center}
 		\textbf{Завдання для лабораторної роботи}
 	\end{center}
-    \begin{enumerate}
-        \item Проаналізувати предметну область вибраного варіанта завдання і сформувати 
-        запити з підзапитами:
-        \begin{itemize}
-            \item Вивід списку атрибутів відношення, кількісні оцінки якого вище середнього.
-            \item Вивід списку атрибутів відношення, кількісні оцінки якого максимальні або
-            мінімальні.
-            \item Вивід списку атрибутів відношення, яке відповідає деякій умові з підзапиту.
-        \end{itemize}        
-    \end{enumerate}
+    Створити представлення для перегляду бази даних з ціллю перегляду інформації,
+	сформульованої в розділі «основні вимоги щодо функцій системи» завдання.
 
 
 \newpage
