--- a/SPR CourseWork/CourseWork.tex
+++ b/SPR CourseWork/CourseWork.tex
@@ -101,19 +101,20 @@
 \newpage
     \section {Частина}
     \subsection {Знайомство з можливостями Anaconda/IPython Notebook}
+    \hrulefill \\
     Для того, щоб почати працювати з Anaconda потрібно її встановити:
     \begin{enumerate}
         \item Перейти на офіційний сайт \href{https://www.anaconda.com/products/distribution}{\underline{Anaconda Distribution}} 
         та натиснути кнопку "Download". Також можна безкоштовно спробувати Anaconda в вашому браузері після реєстрації.
         \begin{figure}[h!]
             \begin{center}
-                \includegraphics[scale=0.35]{D:/Projects/Latex/SPR_CourseWork/Pictures/Figure_1.jpg}
+                \includegraphics[scale=0.35]{Prt sc/Figure_1.jpg}
             \end{center}
         \end{figure}
         \item Після завантаження встановлюємо застосунок. Отримаємо таке повідомлення.
         \begin{figure}[h!]
             \begin{center}
-                \includegraphics[scale=0.8]{D:/Projects/Latex/SPR_CourseWork/Pictures/Figure_2.jpg}
+                \includegraphics[scale=0.8]{Prt sc/Figure_2.jpg}
             \end{center}
         \end{figure}
 \newpage
@@ -121,18 +122,19 @@
         куди була встановлена Anaconda.
         \begin{figure}[h!]
             \begin{center}
-                \includegraphics[scale=0.35]{D:/Projects/Latex/SPR_CourseWork/Pictures/Figure_3.jpg}
+                \includegraphics[scale=0.35]{Prt sc/Figure_3.jpg}
             \end{center}
         \end{figure}
         \item Ось так виглядає Jupyter Notebook.
         \begin{figure}[h!]
             \begin{center}
-                \includegraphics[scale=0.35]{D:/Projects/Latex/SPR_CourseWork/Pictures/Figure_4.jpg}
+                \includegraphics[scale=0.35]{Prt sc/Figure_4.jpg}
             \end{center}
         \end{figure}
     \end{enumerate}
 \newpage
     \subsection{IPython Notebook та Visual Studio Code.}
+    \hrulefill \\
     Надалі я буду працювати з IPython Notebook у редакторі вихідного коду Visual Studio Code. Нижче наведені переваги використання VC Code.
     \begin{enumerate}
         \item Редактор VC Code підтримує декілька мов програмування, у тому числі: JavaScript, C++, PHP, Python, Java, Objective-C, PowerShell,
@@ -150,6 +152,7 @@
     \end{enumerate}
 \newpage
     \subsection {Почнемо знайомство з Jupyter Notebook у Visual Studio Code.}
+    \hrulefill \\
     Для того, щоб працювати з Jupyter Notebook у Visual Studio Code потрібно:
     \begin{enumerate}
         \item Перейти на офіційний сайт \href{https://code.visualstudio.com/}{\underline{Visual Studio Code}} і завантажити редактор коду.
@@ -158,7 +161,7 @@
         \item Натискаємо "File--New File--Jupyter Notebook"
         \begin{figure}[h!]
             \begin{center}
-                \includegraphics[scale=0.9]{D:/Projects/Latex/SPR_CourseWork/Pictures/Figure_5.jpg}
+                \includegraphics[scale=0.9]{Prt sc/Figure_5.jpg}
             \end{center}
         \end{figure}
         \item Зберігаємо файл у папці.
@@ -177,7 +180,7 @@
     і блокнотами Jupyter. 
     \begin{figure}[h!]
         \begin{center}
-            \includegraphics[scale=0.7]{D:/Projects/Latex/SPR_CourseWork/Pictures/Figure_9.jpg}
+            \includegraphics[scale=0.7]{Prt sc/Figure_9.jpg}
         \end{center}
     \end{figure}
 
@@ -189,36 +192,37 @@
         \item Виберіть інтерпретатор Python.
         \begin{figure}[h!]
             \begin{center}
-                \includegraphics[scale=0.7]{D:/Projects/Latex/SPR_CourseWork/Pictures/Figure_10.jpg}
+                \includegraphics[scale=0.7]{Prt sc/Figure_10.jpg}
             \end{center}
         \end{figure}
 \newpage
         \item Налаштуйте debugger через Debug Activity Bar.
         \begin{figure}[h!]
             \begin{center}
-                \includegraphics[scale=0.7]{D:/Projects/Latex/SPR_CourseWork/Pictures/Figure_11.jpg}
+                \includegraphics[scale=0.7]{Prt sc/Figure_11.jpg}
             \end{center}
         \end{figure}
         \item Обираємо поле "Flask" та натискаємо "Enter".
         \begin{figure}[h!]
             \begin{center}
-                \includegraphics[scale=0.7]{D:/Projects/Latex/SPR_CourseWork/Pictures/Figure_12.jpg}
+                \includegraphics[scale=0.7]{Prt sc/Figure_12.jpg}
             \end{center}
         \end{figure}
 \newpage
         \item У цьому файлі можна налаштувати середовище Python та усі встановлені плагіни.
         \begin{figure}[h!]
             \begin{center}
-                \includegraphics[scale=0.6]{D:/Projects/Latex/SPR_CourseWork/Pictures/Figure_13.jpg}
+                \includegraphics[scale=0.6]{Prt sc/Figure_13.jpg}
             \end{center}
         \end{figure}
     \end{enumerate}
 
 \newpage
     \subsection {Початок роботи.}
+    \hrulefill 
     \begin{figure}[h!]
         \begin{center}
-            \includegraphics[scale=0.35]{D:/Projects/Latex/SPR_CourseWork/Pictures/Figure_6.jpg}
+            \includegraphics[scale=0.35]{Prt sc/Figure_6.jpg}
         \end{center}
     \end{figure}
     \begin{enumerate}
@@ -246,7 +250,8 @@
         \end{enumerate}
     \end{enumerate}
 \newpage
-    \subsection {Source control(Git)}\
+    \subsection {Source control(Git)}
+    \hrulefill \\
 
     Source control - це клас систем, відповідальних за керування змінами в комп’ютерних програмах, документах, великих веб-сайтах чи інших колекціях інформації. 
 
@@ -265,14 +270,14 @@
     \end{enumerate}
     \begin{figure}[h!]
         \begin{center}
-            \includegraphics[scale=0.8]{D:/Projects/Latex/SPR_CourseWork/Pictures/Figure_7.jpg}
+            \includegraphics[scale=0.8]{Prt sc/Figure_7.jpg}
         \end{center}
     \end{figure}
 \newpage
     Тепер усі зміни у проекті буду зберігатись на GitHub.
     \begin{figure}[h!]
         \begin{center}
-            \includegraphics[scale=0.35]{D:/Projects/Latex/SPR_CourseWork/Pictures/Figure_8.jpg}
+            \includegraphics[scale=0.35]{Prt sc/Figure_8.jpg}
         \end{center}
     \end{figure}
 
@@ -282,11 +287,20 @@
 
 \newpage
     \section{Частина}
-    \subsection {Аналіз та візуалізація даних у середовищі IPython Notebook на модельних наборах даних.}
-    \href{https://www.kaggle.com/datasets/thedevastator/get-your-game-on-metacritic-recommendations-and}{DataSet}
-    
-
-
+    \subsection {Знайомство з датасетом.}
+    \hrulefill \\
+    Встановити \href{https://www.kaggle.com/datasets/thedevastator/get-your-game-on-metacritic-recommendations-and}{Cryptocurrency Prices Dataset} можна з сайту 
+    \href{https://www.kaggle.com/}{Kaggle}.
+    \begin{center}
+        \textbf{About Dataset}
+    \end{center}
+    Цей набір даних містить історичні ціни та обсяги 4 криптовалют з 9 листопада 2017 року по 27 серпня 2022 року.
+    \begin{itemize}
+        \item BTC - Bitcoin
+        \item BNB - Binance coin
+        \item ETH - Ethereum
+        \item USDT - Tether
+    \end{itemize}
 
 
 
