--- a/SPR CourseWork/CourseWork.tex
+++ b/SPR CourseWork/CourseWork.tex
@@ -301,7 +301,11 @@
         \item ETH - Ethereum
         \item USDT - Tether
     \end{itemize}
-
+    
+\newpage
+    \subsection {Аналіз та візуалізація даних у середовищі IPython Notebook на модельних наборах даних.}
+    \hrulefill \\
+    
 
 
 \end{document} 
