--- a/SPR CourseWork/CourseWork.tex
+++ b/SPR CourseWork/CourseWork.tex
@@ -301,11 +301,13 @@
         \item ETH - Ethereum
         \item USDT - Tether
     \end{itemize}
-    
-\newpage
-    \subsection {Аналіз та візуалізація даних у середовищі IPython Notebook на модельних наборах даних.}
+    \begin{figure}[h!]
+        \begin{center}
+            \includegraphics[scale=0.5]{Prt sc/Figure_14.jpg}
+        \end{center}
+    \end{figure}
+
+    \subsection {Робота у середовищі IPython Notebook на модельних наборах даних.}
     \hrulefill \\
     
-
-
 \end{document} 
