--- a/ADS/1 lab/First_lab.tex
+++ b/ADS/1 lab/First_lab.tex
@@ -18,47 +18,36 @@
 \usepackage{bigstrut}
 \usepackage[pageanchor]{hyperref}
 \usepackage{chngpage}
-\newcommand{\dx}{\textbf{d}x}
-\newcommand{\dt}{\textbf{d}t}
-\newcommand{\du}{\textbf{d}u}
-\newcommand{\dv}{\textbf{d}v}
-\newcommand{\dy}{\textbf{d}y}
-\newcommand{\ds}{\textbf{d}s}
-\newcommand{\dz}{\textbf{d}z}
-\newcommand{\arch}{\textrm{arcch}}
-\newcommand{\arsh}{\textrm{arcsh}}
-\newcommand{\dint}{\displaystyle\int}
 \newcommand\tab[1][1cm]{\hspace*{#1}}
-\newcommand{\dsum}{\displaystyle\sum}
 \newcommand{\RomanNumeralCaps}[1]{\MakeUppercase{\romannumeral #1}}
 \usepackage[left=20mm, top=20mm, right=15mm, bottom=15mm, nohead, nofoot]{geometry}
 
 
 \begin{document}
-\begin{center}
-    \hfill \break
-    \large{\textbf{НАЦIОНАЛЬНИЙ ТЕХНIЧНИЙ УНIВЕРСИТЕТ УКРАЇНИ\\
-            «КИЇВСЬКИЙ ПОЛIТЕХНIЧНИЙ IНСТИТУТ»\\
-            НАВЧАЛЬНО-НАУКОВИЙ ФІЗИКО-ТЕХНІЧНИЙ ІНСТИТУТ}}\\
-    \hfill \break \hfill \break \hfill\break \hfill \break \hfill \break \hfill \break \hfill \break
-    \hfill \break \hfill \break \hfill \break \hfill \break
-    \large{Лабораторна робота № 1}
     \begin{center}
-        \normalsize{\textbf{з дисципліни «Алгоритми та структури даних» \\
-        На тему: «Рекурсивні алгоритми» \\}}
+        \hfill \break
+        \large{\textbf{НАЦIОНАЛЬНИЙ ТЕХНIЧНИЙ УНIВЕРСИТЕТ УКРАЇНИ\\
+                «КИЇВСЬКИЙ ПОЛIТЕХНIЧНИЙ IНСТИТУТ»\\
+                НАВЧАЛЬНО-НАУКОВИЙ ФІЗИКО-ТЕХНІЧНИЙ ІНСТИТУТ}}\\
+        \hfill \break \hfill \break \hfill\break \hfill \break \hfill \break \hfill \break \hfill \break
+        \hfill \break \hfill \break \hfill \break \hfill \break
+        \large{Лабораторна робота № 1}
+        \begin{center}
+            \normalsize{\textbf{з дисципліни «Алгоритми та структури даних» \\
+            На тему: «Рекурсивні алгоритми» \\}}
+        \end{center}
     \end{center}
-\end{center}
-\hfill \break \hfill \break \hfill \break \hfill \break \hfill \break \hfill \break \hfill \break
-\hfill \break \hfill \break \hfill \break \hfill \break \hfill \break \hfill \break 
-\begin{flushright}
-    \large{ \hspace{35pt} Виконав:\\
-        студент групи ФI-12\\
-        Завалій Олександр} 
-\end{flushright}
-\hfill \break \hfill \break \hfill \break \hfill \break \hfill \break \hfill \break \hfill \break
-\hfill \break
-\begin{center} \textbf{Київ-2023} \end{center}
-\thispagestyle{empty}
+    \hfill \break \hfill \break \hfill \break \hfill \break \hfill \break \hfill \break \hfill \break
+    \hfill \break \hfill \break \hfill \break \hfill \break \hfill \break \hfill \break 
+    \begin{flushright}
+        \large{ \hspace{35pt} Виконав:\\
+            студент групи ФI-12\\
+            Завалій Олександр} 
+    \end{flushright}
+    \hfill \break \hfill \break \hfill \break \hfill \break \hfill \break \hfill \break \hfill \break
+    \hfill \break
+    \begin{center} \textbf{Київ-2023} \end{center}
+    \thispagestyle{empty}
 
 \newpage
     \begin{center}
@@ -72,6 +61,19 @@
         \begin{minipage}[h]{1\linewidth}
             \centering
             \includegraphics[width=0.9\linewidth]{Prt sc/Figure_1.png}  
+        \end{minipage}
+    \end{figure}
+
+    \begin{center}
+        \Large{Task \RomanNumeralCaps{4}}
+    \end{center}
+    \textbf{Реалізувати алгоритм для розв’язання задачі «Ханойські вежі».
+    Виписати послідовність ходів для перекладання n дисків вежі (n = 2;
+    3; 4; 5 дисків).}
+    \begin{figure}[h!]
+        \begin{minipage}[h]{1\linewidth}
+            \centering
+            \includegraphics[width=1\linewidth]{Prt sc/Figure_2.png}  
         \end{minipage}
     \end{figure}
 
